# fl_studio_plugin_test

./: .gitignore  CMakeLists.txt  README.md
FL_sdk/: CMakeLists.txt
FL_sdk/include/: fp_pathmanager.h
FL_sdk/src/: fp_cplug.cpp  fp_pathmanager.cpp  fp_plugclass.cpp
Saw VC/: CMakeLists.txt
Saw VC/src/: FruityPlug.cpp  testplug.cpp  testplug.h
